--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
       "@testing-library/jest-dom": "^5.17.0",
       "jest": "^29.7.0",
       "jest-environment-jsdom": "^29.7.0"
+   },
+   "dependencies": {
+      "ejs": "^3.1.10",
+      "express": "^4.19.2"
    }
 }
